# wizardsofts-megabuild

./: .env.appwrite  .env.appwrite.template  .env.example  .env.migration  .gitignore  .gitlab-ci.yml  .gitleaksignore  .trufflehogignore  AGENT.md  AGENT_GUIDELINES.md  APPWRITE_DEPLOYMENT_SUCCESS.md  APPWRITE_DEPLOYMENT_SUMMARY.md  APPWRITE_FRESH_INSTALL_GUIDE.md  APPWRITE_INDEX.md  APPWRITE_NEXT_STEPS.md  APPWRITE_QUICK_REFERENCE.md  APPWRITE_SETUP_SUMMARY.md  APPWRITE_VERIFICATION_REPORT.md  ARCHITECTURE_CORRECTIONS.md  CLAUDE.md  CONSTITUTION.md  DEPLOYMENT_GUIDE.md  DIVINER_INDICATORS_IMPLEMENTATION.md  DIVINER_INTEGRATION_RESEARCH_PLAN.md  EMERGENCY_RECOVERY.md  ENV_CONFIGURATION_GUIDE.md  FUTURE_SCOPE.md  GIBD_NEWS_INTEGRATION_COMPLETE.md  GIBD_NEWS_MEGABUILD_INTEGRATION_PLAN.md  GITLAB_SECURITY_AUDIT_SUMMARY.md  GITLAB_SECURITY_AUDIT_VISUAL.md  GRAFANA_DEPLOYMENT_RETROSPECTIVE.md  IMPLEMENTATION_PROGRESS_REPORT.md  LOCAL_TESTING_URLS.md  MONITORING_APPWRITE_AND_DASHBOARDS.md  OLLAMA_AUTOSCALING_READY.md  POLICY_UPDATES_SUMMARY.md  POSTGRESQL_MIGRATION_COMPLETED.md  POSTGRESQL_MIGRATION_PLAN.md  POSTGRESQL_MIGRATION_README.md  (+21 more)
apps/gibd-quant-calibration/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/gibd-quant-calibration/src/api/: main.py
apps/gibd-quant-calibration/src/auth/: __init__.py  jwt_validator.py
apps/gibd-quant-calibration/src/database/: connection.py
apps/gibd-quant-calibration/src/profiling/: calibrator.py
apps/gibd-quant-celery/: Dockerfile  README.md  pyproject.toml
apps/gibd-quant-celery/src/: celery_app.py
apps/gibd-quant-celery/src/tasks/: calibration.py  celery_tasks.py  exit_checker.py  gibd_sync.py
apps/gibd-quant-nlq/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/gibd-quant-nlq/src/api/: main.py
apps/gibd-quant-nlq/src/database/: connection.py  models.py
apps/gibd-quant-nlq/src/nlq/: __init__.py  api.py  types.py
apps/gibd-quant-nlq/src/nlq/executor/: __init__.py  base.py  comparison_executor.py  ranking_executor.py  threshold_executor.py  trend_executor.py
apps/gibd-quant-nlq/src/nlq/parser/: __init__.py  (+2 more)
(+765 files in other folders)
