[project]
name = "gibd-quant-celery"
version = "0.1.0"
description = "GIBD Quant Celery Background Workers"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
