[project]
name = "gibd-quant-nlq"
version = "0.1.0"
description = "GIBD Quant Natural Language Query Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "py-eureka-client>=0.11.11",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "openai>=1.57.2",
    # SECURITY: Rate limiting
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
]
